ie11 fix wrap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -484,7 +484,7 @@ h1, h2, h3, h4 {
   display: block;
   width: 100%;
   box-sizing: border-box;
-  flex: 1;
+  flex: 1 0 auto;
   padding-top: 130px;
 
   @include media-query($mobile) {
